# technical-docs

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yaml
applications/application-template/: index.html
applications/application-template/feature-template/: index.html  swagger-a9c7a39c.html
docs/: CNAME
docs/applications/application-template/: README.md
docs/applications/application-template/feature-template/: README.md
overrides/partials/: comments.html
search/: search_index.json
