[tool.poetry]
name = "technical-docs"
version = "0.1.0"
description = ""
authors = ["jessepinkman9900 <srinivas@neobase.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
pymdown-extensions = "^10.11"
mkdocs-enumerate-headings-plugin = "^0.6.2"
mkdocs-extract-listings-plugin = "^0.1.3"
mkdocs-material = "^9.5.38"
mkdocs-glightbox = "^0.4.0"
mkdocs-swagger-ui-tag = "^0.6.10"
mkdocs-git-revision-date-localized-plugin = "^1.2.9"
mkdocs-encryptcontent-plugin = "^3.0.3"


[tool.poetry.group.dev.dependencies]
plantumlcli = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
